<resources>
    <string name="app_name">CourseTool</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_listings">Listings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="login_button">LOGIN</string>

    <!-- Strings related to password change -->
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype password</string>
    <string name="change_password">Change password</string>


    <string name="logout">Logout</string>

    <!-- Strings related to the navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_title">Course Tool</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for navigation choices -->
    <string name="view_schedule">View Schedule</string>
    <string name="view_courses">View Courses</string>
    <string name="completed_courses">Completed Courses</string>
    <string name="main_menu">Main Menu</string>
    <string name="other_options">Other Options</string>
    <string name="name_placeholder">name</string>
    <string name="username_placeholder">username</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>

    <string-array name="main_menu_list">
        <item>@string/view_schedule</item>
        <item>@string/view_courses</item>
        <item>@string/completed_courses</item>
    </string-array>

    <string-array name="Courses_List">
        <item>Fall - CSCI 1000</item>
        <item>Fall - CSCI1010</item>
        <item>Winter - CSCI 2132</item>
        <item>Winter - CSCI 3130</item>
        <item>Winter - CSCI 3100</item>
        <item>Summer - CSCI 2110</item>
        <item>Summer - CSCI 4110</item>
    </string-array>

    <string-array name="Course_Filters">
        <item>All</item>
        <item>Fall</item>
        <item>Winter</item>
        <item>Summer</item>
        <item>CSCI</item>
        <item>TEST</item>
        <item>STAT</item>
        <item>HPRO</item>
        <item>BIOL</item>
        <item>CLAS</item>

    </string-array>

    <string name="select_filter">Select A Filter</string>
    <string name="title_activity_day_schedule">DaySchedule</string>
    <string name="title_activity_week_schedule">WeekSchedule</string>
    <string name="register_button">Register</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_birthday">Birthday</string>
    <string name="submit_button">Submit</string>
    <string name="not_matching_password">retyped password does not match</string>
    <string name="password_changed">Password Changed</string>>
    <!-->>>>>>> 8297dd729870ede160f659960c1f1d38ae9073f1-->
</resources>
