...
        android:text="Previous Day"
        android:onClick="prevDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/retWeek"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="Week"
        android:onClick="returnWeek"
        app:layout_constraintEnd_toStartOf="@+id/nextDay"
        app:layout_constraintStart_toEndOf="@+id/prevDay"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextDay"
        android:layout_width="90dp"
...
